<resources>
    <string name="app_name" translatable="false">EasyFlightBag</string>
    <string name="app_prefs" translatable="false">sk.lgstudio.efb</string>
    <string name="gmap_api_key" translatable="false">AIzaSyCxUOrnnZ3KJ5uoTiqBRox_iy0Ifzkjobc</string>
    <string name="pref_chk_folder" translatable="false">chk_folder</string>
    <string name="pref_theme" translatable="false">app_theme</string>
    <string name="pref_gps_bt" translatable="false">gps_via_bt</string>
    <string name="pref_aip_last_update_at" translatable="false">aip_last_update_at</string>
    <string name="pref_aip_last_update_cz" translatable="false">aip_last_update_cz</string>
    <string name="pref_aip_last_update_sk" translatable="false">aip_last_update_sk</string>
    <string name="pref_aip_last_update_hu" translatable="false">aip_last_update_hu</string>
    <string name="pref_aip_last_update_pl" translatable="false">aip_last_update_pl</string>
    <string name="pref_air_last_update" translatable="false">air_last_update</string>
    <string name="pref_document_page" translatable="false">document_page.</string>
    <string name="pref_airplane_selected" translatable="false">airplane_file</string>
    <string name="pref_overlay_selected" translatable="false">map_overlay_country</string>
    <string name="pref_apt_type_selected" translatable="false">map_apt_type_selected</string>
    <string name="folder_root" translatable="false">/EasyFlightBag</string>
    <string name="folder_airplanes" translatable="false">/Airplanes</string>
    <string name="folder_chklist" translatable="false">/Checklists</string>
    <string name="folder_chklist_demo" translatable="false">/Tutorial</string>
    <string name="folder_docs" translatable="false">/Documents</string>
    <string name="folder_aip" translatable="false">/AIP</string>
    <string name="folder_at" translatable="false">/at</string>
    <string name="folder_cz" translatable="false">/cz</string>
    <string name="folder_sk" translatable="false">/sk</string>
    <string name="folder_hu" translatable="false">/hu</string>
    <string name="file_aip_data" translatable="false">/data.txt</string>
    <string name="folder_airspace" translatable="false">/Airspace</string>
    <string name="folder_plans" translatable="false">/Plans</string>
    <string name="service_aip_download" translatable="false">intent_aip_download</string>
    <string name="intent_aip_status" translatable="false">intent_aip_status</string>
    <string name="intent_aip_country" translatable="false">intent_aip_country</string>
    <string name="service_air_name" translatable="false">intent_air_name</string>
    <string name="service_air_download" translatable="false">intent_air_download</string>
    <string name="url_cz_ais" translatable="false">http://lis.rlp.cz/ais_data/aip/control/aip_obsah_en.htm</string>
    <string name="url_cz_ais_data" translatable="false">http://lis.rlp.cz/ais_data</string>
    <string name="url_at_aip" translatable="false">https://eaip.austrocontrol.at/</string>
    <string name="url_open_aip" translatable="false">http://www.openaip.net/customer_export_fj28JDP2053Jdlpczqi3kLv/</string>
    <string name="file_airports" translatable="false">_wpt.aip</string>
    <string name="file_airspace" translatable="false">_asp.aip</string>
    <string name="file_navaids" translatable="false">_nav.aip</string>
    <string name="file_hotspots" translatable="false">_hot.aip</string>
    <string name="gps_latitude" translatable="false">GPSlat</string>
    <string name="gps_longitude" translatable="false">GPSlon</string>
    <string name="gps_accuracy" translatable="false">GPSacc</string>
    <string name="gps_altitude" translatable="false">GPSalt</string>
    <string name="gps_speed" translatable="false">GPSspe</string>
    <string name="gps_time" translatable="false">GPStim</string>
    <string name="gps_bearing" translatable="false">GPSbea</string>
    <string name="gps_location" translatable="false">gps_location</string>
    <string name="gps_enabled" translatable="false">gps_enabled</string>
    <string name="gps_intent_filter" translatable="false">GPSIntent</string>
    <string name="calc_unit_m" translatable="false">m</string>
    <string name="calc_unit_mm" translatable="false">mm</string>
    <string name="calc_unit_km" translatable="false">km</string>
    <string name="calc_unit_ft" translatable="false">ft</string>
    <string name="calc_unit_nmi" translatable="false">nm</string>
    <string name="calc_unit_mi" translatable="false">mi</string>
    <string name="calc_unit_yd" translatable="false">yd</string>
    <string name="calc_unit_in" translatable="false">in</string>
    <string name="calc_unit_kmh" translatable="false">km/h</string>
    <string name="calc_unit_kn" translatable="false">knots</string>
    <string name="calc_unit_mph" translatable="false">mph</string>
    <string name="calc_unit_mps" translatable="false">m/s</string>
    <string name="calc_unit_ftpmin" translatable="false">ft/min</string>
    <string name="calc_unit_kg" translatable="false">kg</string>
    <string name="calc_unit_t" translatable="false">T</string>
    <string name="calc_unit_lb" translatable="false">lb</string>
    <string name="calc_unit_l" translatable="false">l</string>
    <string name="calc_unit_m_cube" translatable="false">m^3</string>
    <string name="calc_unit_g_us" translatable="false">US fl. gal.</string>
    <string name="calc_unit_g_imp" translatable="false">imp. gal.</string>
    <string name="calc_unit_oz" translatable="false">fl. oz</string>
    <string name="calc_unit_hpa_bma" translatable="false">hPa (mBa)</string>
    <string name="calc_unit_atm" translatable="false">ATM</string>
    <string name="calc_unit_inhg" translatable="false">In. Hg.</string>
    <string name="calc_unit_kgxm" translatable="false">kg x m</string>
    <string name="calc_unit_lbxin" translatable="false">lb x in</string>
    <string name="calc_unit_c" translatable="false">C</string>
    <string name="calc_unit_f" translatable="false">F</string>
    <string name="calc_unit_k" translatable="false">k</string>
    <string name="calc_unit_kg_m3" translatable="false">kg/m^3</string>
    <string name="calc_unit_kg_l" translatable="false">kg/l</string>
    <string name="calc_unit_h" translatable="false">h</string>
    <string name="calc_unit_min" translatable="false">m</string>
    <string name="calc_unit_sec" translatable="false">s</string>
    <string name="calc_unit_lph" translatable="false">l/hour</string>
    <string name="calc_unit_gph" translatable="false">gal./hour</string>
    <string name="calc_unit_degree" translatable="false">°</string>
    <string name="calc_unit_sat" translatable="false">%SAT</string>
    <string name="calc_eq_dme" translatable="false">DME</string>
    <string name="calc_eq_adf" translatable="false">ADF</string>
    <string name="calc_eq_gnss" translatable="false">GNSS</string>
    <string name="calc_eq_hf" translatable="false">HF RTF</string>
    <string name="calc_eq_mls" translatable="false">MLS</string>
    <string name="calc_eq_ils" translatable="false">ILS</string>
    <string name="calc_eq_vor" translatable="false">VOR</string>
    <string name="calc_eq_uhf" translatable="false">UHF RTF</string>
    <string name="calc_eq_vhf" translatable="false">VHF RTF</string>
    <string name="calc_eq_other" translatable="false">Other</string>
    <string name="calc_eq_n" translatable="false">None</string>
    <string name="calc_eq_a" translatable="false">A</string>
    <string name="calc_eq_c" translatable="false">C</string>
    <string name="calc_eq_e" translatable="false">E</string>
    <string name="calc_eq_h" translatable="false">H</string>
    <string name="calc_eq_i" translatable="false">I</string>
    <string name="calc_eq_l" translatable="false">L</string>
    <string name="calc_eq_x" translatable="false">X</string>
    <string name="calc_eq_p" translatable="false">P</string>
    <string name="calc_eq_s" translatable="false">S</string>
    <string name="tab_home">Home</string>
    <string name="tab_aip">AIP</string>
    <string name="tab_chklist">Checklists</string>
    <string name="tab_docs">Documents</string>
    <string name="tab_functions">Calculations</string>
    <string name="tab_settings">Settings</string>
    <string name="loading">loading&#8230;</string>
    <string name="file_chk_plane">Switch Add and Delete airplane type.txt</string>
    <string name="file_chk_plane_">Click on the airplane icon\n
        Select airplane from the list\n
        Add new airplane by entering the name into the empty field then clicking the + icon\n
        Click the trashcan icon to delete the airplane</string>
    <string name="file_chk_add_list">Add new checklist.txt</string>
    <string name="file_chk_add_list_">Click on the + icon while no checklist is open\n
        Fill the form\n
        Write the tasks into individual lines\n
        Click save to save your new checklist</string>
    <string name="file_chk_edit_list">Edit and Delete checklist.txt</string>
    <string name="file_chk_edit_list_">Click on the pen icon while the list is open\n
        Edit the list\n
        Save or discract changes\n
        The trashcan icon allows you to delete the list</string>
    <string name="country_all">All</string>
    <string name="country_at">Austria</string>
    <string name="country_cz">Czech Republic</string>
    <string name="country_sk">Slovakia</string>
    <string name="country_hu">Hungary</string>
    <string name="country_pl">Poland</string>
    <string name="chk_menu">Checklists</string>
    <string name="chk_add_airplane">Add new airplane (Aircraft ID)</string>
    <string name="chk_plane_exists_toast">Airplane already exists</string>
    <string name="chk_plane_delete_toast">Airplane deleted</string>
    <string name="chk_plane_delete_fail_toast">Unable to delete airplane</string>
    <string name="chk_saved_toast">Checklist saved</string>
    <string name="chk_deleted_toast">Checklist deleted</string>
    <string name="chk_deleted_fail_toast">Unable to delete checklist</string>
    <string name="manage_airplanes">Manage Airplanes</string>
    <string name="manage_airplanes_select">Select from existing airplanes</string>
    <string name="manage_plans">Manage Flight Plans</string>
    <string name="manage_plans_select">Select from existing flight plans</string>
    <string name="flight_plan_add">Add new flight plan</string>
    <string name="btn_back">Back</string>
    <string name="btn_save">Save</string>
    <string name="btn_import">Import</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="ask_sure">Are you sure?</string>
    <string name="calc_conv">Conversions</string>
    <string name="calc_conv_dist">Distance</string>
    <string name="calc_conv_speed">Speed</string>
    <string name="calc_conv_v_speed">Vertical speed</string>
    <string name="calc_conv_mass">Mass</string>
    <string name="calc_conv_vol">Volume</string>
    <string name="calc_conv_press">Pressure</string>
    <string name="calc_conv_temp">Temperature</string>
    <string name="calc_conv_fuel">Fuel</string>
    <string name="calc_conv_moment">Moment (W&amp;B)</string>
    <string name="calc_func">Functions</string>
    <string name="calc_func_time">Distance</string>
    <string name="calc_func_fuel">Fuel</string>
    <string name="calc_func_wind">Wind</string>
    <string name="calc_bal">Weight/Balance</string>
    <string name="calc_units">Units</string>
    <string name="calc_performances">Performances</string>
    <string name="calc_cruise_sp">Cruise speed</string>
    <string name="calc_climb_sp">Climb speed</string>
    <string name="calc_descent_sp">Descent speed</string>
    <string name="calc_climb_rt">Climb rate</string>
    <string name="calc_descent_rt">Descent rate</string>
    <string name="calc_avg_flow">Average flow</string>
</resources>