<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:weightSum="1"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              >


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.30"
        android:elevation="@dimen/elevation_8"
        android:background="?attr/backgroundColor"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Side_menu_text.big"
                android:id="@+id/calc_WB"
                android:text="@string/calc_bal"/>

            <TextView
                style="@style/Side_menu_category"
                android:text="@string/calc_func"
                />

            <TextView
                style="@style/Side_menu_text"
                android:text="@string/calc_func_time"
                android:id="@+id/calc_func_time"/>

            <TextView
                style="@style/Side_menu_text"
                android:id="@+id/calc_func_fuel"
                android:text="@string/calc_func_fuel"/>

            <TextView
                style="@style/Side_menu_text"
                android:id="@+id/calc_func_wind"
                android:text="@string/calc_func_wind" />

            <TextView
                style="@style/Side_menu_category"
                android:text="@string/calc_conv"/>

            <TextView
                style="@style/Side_menu_text"
                android:id="@+id/calc_conv_fuel"
                android:text="@string/calc_conv_fuel" />

            <TextView
                style="@style/Side_menu_text"
                android:id="@+id/calc_conv_dist"
                android:text="@string/calc_conv_dist" />

            <TextView
                style="@style/Side_menu_text"
                android:id="@+id/calc_conv_speed"
                android:text="@string/calc_conv_speed"/>

            <TextView
                style="@style/Side_menu_text"
                android:id="@+id/calc_conv_mass"
                android:text="@string/calc_conv_mass"/>

            <TextView
                style="@style/Side_menu_text"
                android:id="@+id/calc_conv_vol"
                android:text="@string/calc_conv_vol" />

            <TextView
                style="@style/Side_menu_text"
                android:id="@+id/calc_conv_press"
                android:text="@string/calc_conv_press" />

            <TextView
                style="@style/Side_menu_text"
                android:id="@+id/calc_conv_temp"
                android:text="@string/calc_conv_temp" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.70"
        android:id="@+id/calc_frame"
        android:background="?attr/backgroundDarkColor">

    </LinearLayout>

</LinearLayout>