<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal"
              android:weightSum="1"
              android:paddingTop="@dimen/tab_padding"
              android:paddingBottom="@dimen/tab_padding">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.2"
        android:orientation="vertical">
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <EditText
            android:id="@+id/calc_unit_text_kmh"
            style="@style/Calculator_edit_text_field"
            />

        <EditText
            android:id="@+id/calc_unit_text_kn"
            style="@style/Calculator_edit_text_field"
            />

        <EditText
            android:id="@+id/calc_unit_text_mph"
            style="@style/Calculator_edit_text_field"
            />

        <EditText
            android:id="@+id/calc_unit_text_ftpmin"
            style="@style/Calculator_edit_text_field"
            />

        <EditText
            android:id="@+id/calc_unit_text_mps"
            style="@style/Calculator_edit_text_field"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:orientation="vertical">

        <TextView
            style="@style/Calculator_text_unit"
            android:text="@string/calc_unit_kmh"
            />

        <TextView
            style="@style/Calculator_text_unit"
            android:text="@string/calc_unit_kn"
            />

        <TextView
            style="@style/Calculator_text_unit"
            android:text="@string/calc_unit_mph"
            />

        <TextView
            style="@style/Calculator_text_unit"
            android:text="@string/calc_unit_ftpmin"
            />

        <TextView
            style="@style/Calculator_text_unit"
            android:text="@string/calc_unit_mps"
            />

    </LinearLayout>


</LinearLayout>